[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
+            <img src="/E:\pavan\my\Lenovo A2010-a\photos\New folder\2016-03-18-16-59-10-570.jpg" class="img-medium"/>
         </div>
         <br>
         <div class="center text-big bold">
